[project]
name = "q_python"
version = "0.0.1"
authors = [
  { name="Hung Q.", email="htq287@gmail.com" },
]
description = "🛠 An useful project structure for creating effectively Python applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/htq287/q-python-template"
Issues = "https://github.com/htq287/q-python-template/issues"